# osu-manina-tail-maker

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-run.ps1  package-lock.json  package.json  run-build.ps1  run-dev.ps1
.github/workflows/: release.yml
docs/: glossary.md  requirements-analysis.md  system-design.md
scripts/: build-tools.cjs
shared/: Cargo.toml
shared/src/: backup.rs  image_utils.rs  keyd_repair.rs  lazer_repair.rs  lib.rs  logger.rs  osk_ops.rs  preset_loader.rs  skin_finder.rs  skin_ini.rs  skin_validator.rs  tail_repair.rs  tail_toolbox.rs  throw_cache.rs  throw_info.rs  throw_length.rs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-tools/: Cargo.toml  tauri.conf.json
src-tauri-tools/frontend/: index.html
src-tauri-tools/src/: lib.rs
src-tauri/src/: commands.rs  config.rs  lib.rs  preset.rs
src-tauri/src/renderer/: body.rs  border.rs  cap.rs  gpu.rs  mod.rs  morph.rs  render.rs
src-tauri/src/renderer/effects/: border.rs  echo.rs  glow.rs  mod.rs
src-tauri/src/tools/: image_parser.rs  mod.rs
src/components/: NotificationToast.vue
src/components/ConfigPanel/: BodySection.vue  CapSection.vue  ConfigPanel.vue  EffectSection.vue  GlobalAppearanceSection.vue  GlobalSection.vue  ImageSection.vue  MarginSection.vue  PresetSection.vue  RevertButton.vue
src/components/PreviewPanel/: ExportBar.vue  ImportPanel.vue  PresetPanel.vue  PreviewPanel.vue  ToolPanel.vue
src/components/ToolPanel/: AddScript.vue  BatchGenerate.vue  TailRepair.vue
src/composables/: useConfig.ts
src/types/: config.ts
src/utils/: debounce.ts
tauri-tail-maker/: index.html  package-lock.json  package.json  run-build.ps1  run-dev.ps1  tsconfig.json  tsconfig.node.json  vite.config.ts
tauri-tail-maker-external/: Cargo.toml  tauri.conf.json
tauri-tail-maker-external/capabilities/: default.json
tauri-tail-maker-external/frontend/: index.html  script.js  style.css
tauri-tail-maker-external/src/: converter.rs  key_finder.rs  lib.rs  main.rs  preset_loader.rs  skin_finder.rs
tauri-tail-maker/src/: App.vue  main.ts  style.css
tauri-tail-maker/src-tauri/: Cargo.toml  tauri.conf.json
tauri-tail-maker/src-tauri/icons/: icon.icns
tauri-tail-maker/src-tauri/src/: commands.rs  config.rs  events.rs  lib.rs  logger.rs  preset.rs
tauri-tail-maker/src-tauri/src/commands/: addscript_cmds.rs  batch_cmds.rs  config_cmds.rs  mod.rs  repair_cmds.rs  throw_cmds.rs  toolbox_cmds.rs
tauri-tail-maker/src-tauri/src/renderer/: render.rs
tauri-tail-maker/src-tauri/src/renderer/effects/: echo.rs
tauri-tail-maker/src/components/ConfigPanel/: BodySection.vue  CapSection.vue  EffectSection.vue  GlobalAppearanceSection.vue  ImageSection.vue  RevertButton.vue
tauri-tail-maker/src/components/PreviewPanel/: ExportBar.vue  PresetPanel.vue  PreviewPanel.vue  ToolPanel.vue
tauri-tail-maker/src/components/ToolPanel/: AddScript.vue  BatchGenerate.vue  OneClickLength.vue  SkinAdapter.vue  SkinValidator.vue  TailRepair.vue
tauri-tail-maker/src/components/shared/: LogPanel.vue
tauri-tail-maker/src/composables/: useConfig.ts  useNotification.ts  useToolLogger.ts
tauri-tail-maker/src/types/: logger.ts  throw.ts
tauri-tail-maker/src/utils/: logger.ts
