[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Common utilities shared across osu-mania-tail-maker workspace crates"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2"
base64 = "0.22"
chrono = "0.4"
tokio = { version = "1", features = ["sync"] }
