[package]
name = "osu-mania-tail-maker"
version = "0.1.0"
description = "osu!mania NoteL maker"
authors = ["xuan_yuan"]
license = ""
repository = "https://github.com/2710165659/osu-manina-tail-maker"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
tiny-skia = "0.11"
base64 = "0.22"
thiserror = "2"
