[package]
name = "tail-maker-external"
version = "0.1.0"
description = "osu!mania Tail Maker External Tool"
authors = ["xuan_yuan"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tail_maker_external_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
shared = { path = "../shared" }

# 最大程序减少打包后的体积
# [profile.release]
# codegen-units = 1
# lto = true
# panic = "abort"
# opt-level = "z"
# strip = true