[package]
name = "tail-maker-external"
version = "0.1.0"
description = "osu!mania Tail Maker External Tool"
authors = ["xuan_yuan"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tail_maker_external_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
shared = { path = "../shared" }
